# dictation-testing

./: Cargo.toml  README.md  download_model.sh
src/: audio.rs  config.rs  events.rs  hotkey.rs  indicator.rs  main.rs  model.rs  output.rs  state.rs  transcriber.rs  tray.rs  triggers.rs  vad.rs  worker.rs
src/plans/: dictation-app-with-smart-triggers-refined-plan-12292313.plan.md  local-dictation-app-for-apple-silicon-rust-backend-12292307.plan.md
tests/: integration_tests.rs
